[package]
name = "cp437-tools"
description = "Small collection of tools to handle CP437 files"
version = "0.7.1"
repository = "https://git.k93.sh/kip/cp437-tools"
license = "GPL-3.0-or-later AND CC-BY-SA-4.0"
authors = [ "kip93 <leandro@kip93.net>" ]
categories = [ "command-line-utilities", "multimedia::images" ]
keywords = [ "ansi", "art", "ascii", "cli", "cp437" ]
autobins = false

rust-version = "1.77.0" # Increasing this is a breaking change!
edition = "2021"
publish = true

[[bin]]
name = "cp437-tools"
path = "src/main.rs"
required-features = ["binaries"]
test = false

[[bin]]
name = "cp437-check-meta"
path = "src/bins/check-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-help"
path = "src/bins/help/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-read-meta"
path = "src/bins/read-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-remove-meta"
path = "src/bins/remove-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-set-meta"
path = "src/bins/set-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-png"
path = "src/bins/to-png/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-svg"
path = "src/bins/to-svg/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-txt"
path = "src/bins/to-txt/main.rs"
required-features = ["binaries"]

[dependencies]
chrono = { version = "0.4.10", default-features = false, features = [ "std" ] }
embed-doc-image = "0.1.0"
indexmap = "2.0.0"
indoc = "2.0.0"
lazy_static = "1.1.0"
rust-embed = { version = "8.0.0", features = [ "include-exclude", "interpolate-folder-path" ] }
ttf-parser = "0.25.0"

# TODO https://github.com/rust-lang/cargo/issues/1982
base64 = { version = "0.22.0", optional = true }
humansize = { version = "2.0.0", optional = true }
png = { version = "0.17.10", optional = true }
regex = { version = "1.0.0", optional = true }
svg = { version = "0.18.0", optional = true }

[build-dependencies]
indoc = "2.0.0"

[dev-dependencies]
file_diff = "1.0.0"
pretty_assertions = "1.0.0"
tempfile = "3.1.0"

[features]
default = ["binaries"]
# TODO https://github.com/rust-lang/cargo/issues/1982
binaries = ["dep:base64", "dep:humansize", "dep:png", "dep:regex", "dep:svg"]

[lints.clippy]
all = { level = "deny", priority = -1 }
needless_borrow = "allow"
needless_return = "allow"
ptr_arg = "allow"

[lints.rust]
dead_code = "deny"
unreachable_code = "deny"
unused_imports = "deny"
unused_macros = "deny"
unused_mut = "deny"
unused_variables = "deny"
