[package]
name = "cp437-tools"
description = "Small collection of tools to handle CP437 files"
version = "0.9.0"
repository = "https://git.k93.sh/kip/cp437-tools"
license = "GPL-3.0-or-later AND CC-BY-SA-4.0"
authors = [ "kip93 <leandro@kip93.net>" ]
categories = [ "command-line-utilities", "multimedia::images" ]
keywords = [ "ansi", "art", "ascii", "cli", "cp437" ]
autobins = false

rust-version = "1.77.0" # Increasing this is a breaking change!
edition = "2021"
publish = true

[[bin]]
name = "cp437-tools"
path = "src/main.rs"
required-features = ["binaries"]
test = false

[[bin]]
name = "cp437-check-meta"
path = "src/bins/check-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-help"
path = "src/bins/help/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-read-meta"
path = "src/bins/read-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-remove-meta"
path = "src/bins/remove-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-set-meta"
path = "src/bins/set-meta/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-png"
path = "src/bins/to-png/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-svg"
path = "src/bins/to-svg/main.rs"
required-features = ["binaries"]

[[bin]]
name = "cp437-to-txt"
path = "src/bins/to-txt/main.rs"
required-features = ["binaries"]

[dependencies]
chrono = { version = "0.4.10", default-features = false, features = [ "std" ] }
embed-doc-image = "0.1.0"
indexmap = "2.0.0"
indoc = "2.0.0"
lazy_static = "1.1.0"
regex = "1.0.0"
rust-embed = { version = "8.0.0", features = [ "include-exclude", "interpolate-folder-path" ] }
ttf-parser = "0.25.0"

itertools = { version = "0.14.0", optional = true }
strum = { version = "0.27.1", optional = true }
strum_macros = { version = "0.27.1", optional = true }

# TODO https://github.com/rust-lang/cargo/issues/1982
base64 = { version = "0.22.0", optional = true }
humansize = { version = "2.0.0", optional = true }
png = { version = "0.17.10", optional = true }
svg = { version = "0.18.0", optional = true }

[build-dependencies]
indoc = "2.0.0"

[dev-dependencies]
file_diff = "1.0.0"
pretty_assertions = "1.0.0"
rand = "0.9.0"
tempfile = "3.1.0"

[features]
_gen = ["dep:itertools", "dep:strum", "dep:strum_macros"]
# TODO https://github.com/rust-lang/cargo/issues/1982
default = ["binaries"]
binaries = ["dep:base64", "dep:humansize", "dep:png", "dep:svg"]

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
absolute_paths = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
doc_markdown = "allow"
empty_enum_variants_with_brackets = "deny"
field_scoped_visibility_modifiers = "deny"
get_unwrap = "deny"
ignored_unit_patterns = "allow"
implicit_return = "deny"
integer_division = "deny"
large_include_file = "deny"
many_single_char_names = "allow"
missing_docs_in_private_items = "deny"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
needless_return = "allow"
string_to_string = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"

[lints.rust]
future_incompatible = "deny"
mismatched_lifetime_syntaxes = "deny"
missing_docs = "deny"
non_ascii_idents = "deny"
nonstandard_style = "deny"
unfulfilled_lint_expectations = "deny"
unused = "deny"
